tests/ui/union.stderr
error: unions aren't supported
 --> tests/ui/union.rs:5:1
  |
5 | union Test<T> {
  | ^^^^^
